--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,78 @@
-* {
-  box-sizing: border-box;
-}
+header {
+    background-color: grey;
 
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  color: black;
-  background-color: white;
-}
 
-nav {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5rem;
-  gap: 0.5rem;
-  border-bottom: solid 1px #aaa;
-  background-color: #eee;
-}
-
-nav a {
-  display: inline-block;
-  min-width: 9rem;
-  padding: 0.5rem;
-  border-radius: 0.2rem;
-  border: solid 1px #aaa;
-  text-align: center;
-  text-decoration: none;
-  color: #555;
-}
-
-nav a[aria-current='page'] {
-  color: #000;
-  background-color: #d4d4d4;
 }
 
 main {
-  padding: 1rem;
+    background-color: beige;
+}
+
+footer {
+    background-color: grey;
+}
+
+img {
+    width: 100% !important;
+    height: 25rem !important;
 }
 
 h1 {
-  font-weight: bold;
-  font-size: 1.5rem;
+    font-size: 60px !important;
+    text-align: center !important;
+}
+
+footer {
+    background-color: rgb(208, 203, 203);
+    text-align: center;
+    font-size: 15px;
+}
+
+p.color {
+    color: rgb(23, 23, 109);
+    text-align: center;
+    font-size: 20px !important;
+    border: px solid rgb(156, 150, 150);
+    padding: 20px;
+    bottom: 30px;
+    background-color: rgb(225, 223, 223);
+}
+
+div.maps {
+    justify-content: center !important;
+}
+
+h3 {
+    background-color: grey;
+    text-align: center;
+    font-size: 35px !important;
+}
+
+div.Formular {
+    padding: 40px;
+}
+
+div.high {
+    display: flex;
+    justify-content: center;
+    font-size: 25px
+    !important;
+}
+
+nav.navbar {
+    font-size: 35px !important;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 570px;
+    object-fit: scale-down;
+}
+.bilder{ 
+    width:60%;
+ ;
+}
+.content{
+    margin-left: auto;
+    margin-right: auto;
 }
